Fix overflow-x scrolling issue

--- a/assets/css/wikinotes.less
+++ b/assets/css/wikinotes.less
@@ -12,7 +12,8 @@ html, body {
 }
 
 #main {
-	overflow: auto;
+	overflow-y: auto;
+	overflow-x: hidden;
 	padding-bottom: @footer-height + 20;
 }
 
